--- a/css/md-to-pdf.css
+++ b/css/md-to-pdf.css
@@ -21,5 +21,9 @@ img {
 }
 
 body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
+    font-family: "Cambria", "Times New Roman", "Helvetica", "Arial", "Microsoft YaHei", "PingFang SC", sans-serif;
+}
+
+code, pre {
+    font-family: "Consolas", "Courier New", "Microsoft YaHei Mono", monospace;
 }
